# uaproject-backend-schemas

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: notify.yml
uaproject_backend_schemas/: __init__.py  base.py  errors.py  id_generator.py  models.py  models_init.py  schemas.py
uaproject_backend_schemas/applications/: __init__.py  models.py  payload.py  schemas.py
uaproject_backend_schemas/awesome/: __init__.py  actions.py  base_model.py  events.py  fields.py  filters.py  mixins.py  model.py  payloads.py  schemas.py  scopes.py  sorts.py  types.py  utils.py
uaproject_backend_schemas/models/: application.py  application.pyi  balance.py  balance.pyi  punishment.py  punishment.pyi  punishment_config.py  punishment_config.pyi  returned.py  role.py  role.pyi  service.py  service.pyi  test.py  test.pyi  token.pyi  transaction.py  transaction.pyi  user.py  user.pyi  user_roles.py  user_roles.pyi  user_token.py  user_token.pyi  webhook.py  webhook.pyi
uaproject_backend_schemas/models/schemas/: application.py  punishment.py  service.py  transaction.py  user.py  webhook.py
uaproject_backend_schemas/news/: models.py  schemas.py
uaproject_backend_schemas/payments/: __init__.py
uaproject_backend_schemas/punishments/: __init__.py  models.py  schemas.py
uaproject_backend_schemas/users/: __init__.py  models.py  payload.py  schemas.py
uaproject_backend_schemas/utils/: generate_pyi.py  id_generator.py  registry.py
uaproject_backend_schemas/webhooks/: __init__.py  handlers.py  mixins.py  models.py  schemas.py  types.py
(+30 files in other folders)
